<resources>
    <string name="app_name">My Text Adventure</string>
    <string name="edit_message">Edit</string>
    <string name="door">Door</string>
    <string name="closet">Closet</string>
    <string name="urn">Urn</string>
    <string name="window">Window</string>
    <string name="r2b1">Proceed</string>
    <string name="r2b2">Window</string>
    <string name="r2b3">Button</string>
    <string name="r2b4">Painting</string>



    <string name="getstart">Welcome to Mitchell\'s Text Adventure!\n Please press start to begin!</string>
    <string name="Start">Start</string>
    <string name="button_send">Placeholder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>

    <string name="room1">You are trapped in some sort of dark room… There is a door on your left, some sort of urn in the corner, a closet, and a window.\nWhat will you do?</string>
    <string name="doornokey">The door seems to be locked… Perhaps there is a key nearby?</string>
    <string name="doorkey">You insert the key and turn it. The door becomes unlocked, and you proceed to the next room. Oddly, the key vanishes into thin air…</string>
    <string name="closetb">Though it looked promising, the closet doesn\'t contain anything of note. In fact, it seems there is nothing at all inside.</string>
    <string name="windowb">You look out of the window, but it\'s pitch black outside.</string>
    <string name="urnnokey">You shake the urn and hear something moving within. You then turn the urn upside down, and a key falls out.</string>
    <string name="urnkey">You already checked the urn.</string>

    <string name="room2">You are now in a somewhat lit hallway… There is a painting on the wall, another window,\nand some kind of button. What will you do?</string>
    <string name="r2hallway">You continue further down the hall.</string>
    <string name="r2window">Looking out the window, you can faintly see a courtyard. Nothing else of note.</string>
    <string name="r2button">You investigate the button, but it\'s old and rusted. Pressing it has no result.</string>
    <string name="r2painting">The painting is just a plain picture of a meadow. Curious, you remove it from the wall.\nBehind it is a note that says \"r1b1g0\". Perhaps you should note this down.</string>
    <string name ="room3">You proceed down the hall, and find a strange room with 3 buttons, red, green, and blue, and a large door.</string>
    <string name="r3doorfail">The door refuses to open.</string>
    <string name="r3doorpass">You manage to open the door...</string>
    <string name="r3r0">You press the red button, causing it to light up.</string>
    <string name="r3r1">You press the red button again, shutting its light off.</string>
    <string name="r3b0">You press the blue button, causing it to light up.</string>
    <string name="r3b1">You press the blue button again, shutting its light off.</string>
    <string name="r3g0">You press the green button, causing it to light up.</string>
    <string name="r3g1">You press the green button again, shutting its light off.</string>

</resources>
