<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MyActivity"
    android:weightSum="1">







    <Button android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:onClick="button1func"
        android:layout_gravity="bottom"
        android:textSize="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/closet"
        android:onClick="button2func"
        android:layout_gravity="bottom"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/button3"
        android:layout_toRightOf="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:visibility="invisible" />
    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/window"
        android:onClick="button3func"
        android:layout_gravity="bottom"
        android:textSize="10dp"
        android:layout_alignTop="@+id/button4"
        android:layout_toLeftOf="@+id/button4"
        android:layout_toStartOf="@+id/button4"
        android:allowUndo="false"
        android:visibility="invisible" />
    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/urn"
        android:onClick="button4func"
        android:layout_gravity="bottom"
        android:textSize="10dp"
        android:layout_alignTop="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />
    <TextView
        android:layout_width="104dp"
        android:layout_height="301dp"
        android:text="@string/getstart"
        android:id="@+id/textView"
        android:layout_gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />





</RelativeLayout>

